css: fix z-index on IE
For some reason, on IE the Z-index was ignored.

--- a/html/css/main.css
+++ b/html/css/main.css
@@ -17,7 +17,7 @@ html {
     background: purple;
     padding: 5px;
     margin: 0;
-	z-index: 500;
+	z-index: 5000;
 	width: 100%;
 }
 
